--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=springboot-mall
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/mall?characterEncoding=UTF-8&serverTimezone=Asia/Taipei
+spring.datasource.username=root
+spring.datasource.password=springboot
