--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mall?characterEncoding=UTF-8&serverTimezone=Asia/Taipei
 spring.datasource.username=root
 spring.datasource.password=springboot
+
+#????
+spring.jackson.time-zone=GMT+8
+#????
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
