--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,22 @@
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
+
+		<!--JWT	-->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.12.6</version>
+		</dependency>
+
+
+
+		<!--	Spring Security	-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
